tweaked dark mode and added pics

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -10,7 +9,11 @@ body {
   line-height: 1.6;
   background-color: #fff;
   color: #333;
-  padding-bottom: 60px; /* space for footer */
+  padding-bottom: 60px; 
+  background-image: url('images/bg.jpg'); 
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 header {
@@ -129,19 +132,38 @@ input, textarea {
 }
 
 
-/* Example dark mode styles */
+
 .dark-mode {
   background-color: #222;
-  color: #000000;
+  color: #151515;
+  background-image: url('images/bg-dark.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
+
+.dark-mode section {
+  background-color: #474747; 
+  color: #111; 
+}
+
 .dark-mode button,
 .dark-mode input,
 .dark-mode textarea {
   background: #333;
-  color: #eee;
+  color: #111; 
   border-color: #444;
 }
 
+.dark-mode #projects {
+  background-color: #5a5a5a; 
+  color: #111;
+}
+
+.dark-mode #contact {
+  background-color: #5a5a5a; 
+  color: #111;
+}
 
 section {
   opacity: 0;
